# pcodec

./: .gitignore  CMakeLists.txt  PreLoad.cmake  build.sh
pco_c/: Cargo.toml  run_cbindgen.sh
pco_c/include/: cpcodec.h  cpcodec_generated.h
pco_c/src/: lib.rs
pco_c/test/: run_test.sh  test_cpcodec.c
pco_clib/: CMakeLists.txt
pco_clib/cmake/: sanitize.cmake
pco_clib/include/: cpcodec_generated.h
pco_clib/src/: CMakeLists.txt
