SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_LIST_DIR}/cmake)

INCLUDE(cmake/sanitize.cmake)

ADD_LIBRARY(pco_c INTERFACE)
TARGET_INCLUDE_DIRECTORIES(pco_c INTERFACE ${CMAKE_CURRENT_LIST_DIR}/include)
TARGET_LINK_DIRECTORIES(pco_c INTERFACE ${CMAKE_CURRENT_LIST_DIR}/../target/release)
TARGET_LINK_LIBRARIES(pco_c INTERFACE cpcodec)

ADD_SUBDIRECTORY(src)
